2011-11-22  Gary Funck  <gary@intrepid.com>

	* upc-act.c (upc_cpp_builtins): Generate new pre-defined
	macro: __GUPC__.

2011-11-19  Gary Funck  <gary@intrepid.com>

	* config-lang.in: Remove checks for supported targets.
	This is now done at a higher level.
 
2011-10-26  Gary Funck  <gary@intrepid.com>

	Rename "GCC/UPC" to "GNU UPC", "UPC" to "GUPC", and
	"libupc" to "libgupc".
	* gupc.c: Rename from upc-cmd.c and adjust for rename
	of libupc to libgupc.
	* upc-lang.c (LANG_HOOKS_NAME): Change "GCC UPC" to "GNU UPC".
	* config-lang.in: Adjust for rename of libupc to libgupc.
	* gupc.1: Rename from upc.1.  Change "GCC UPC" references to "GNU UPC".
	Adjust for rename of libupc to libgupc.  Improve formatting.
	* gupc-manpage.html: Rename from upc-manpage.html.  Re-generate.
	* Make-lang.in: Change "upc" to "gupc".  Change "xupc" to "xgupc".
	Adjust for rename of libupc to libgupc.  Install target symlink from
	"upc" to "gupc".  Install target/version-specific hard links to "gupc".

2011-10-17  Gary Funck  <gary@intrepid.com>

	Fix a regression caused by the previous commit.
	* upc-genericize.c (upc_genericize_walk):
	Renamed from: upc_genericize_stmt.
	(upc_shared_addr): for COMPONENT_REF and INDIRECT_REF
	re-walk the tree after simplification, by calling
	upc_genericize_walk().
	(upc_genericize_array_ref): expand the newly constructed
	indirect reference by calling upc_genericize_indirect_ref().
 
2011-10-10  Gary Funck  <gary@intrepid.com>

	* upc-genericize.c (upc_simplify_shared_ref): When simplifying
	the base address always convert to (shared [] char *).
	This ensures that &a[i].field1 ends up with the required
	zero block size, for example.

2011-09-22  Gary Funck  <gary@intrepid.com>

	* upc-act.c (upc_get_block_factor): test TYPE_HAS_BLOCK_FACTOR()
	before calling TYPE_BLOCK_FACTOR().  This fits better with
	recent encoding of block factor values with a hash table.

2011-09-15  Gary Funck  <gary@intrepid.com>

	Fix ICE involving shared bit field accesses.